update relation query 2
